--- a/assignment/index.html
+++ b/assignment/index.html
@@ -10,3 +10,40 @@
    <title> Assigment</title>
 
 </head>
+<body>
+    <main>
+        <div class="box1">
+          <h1 style="text-align: center;"> Take Better Notes</h1>
+        </div>
+        <div class="box2">
+              <h1>My Notes</h1>
+             <ul>
+                <li> note one </li>
+                <li> note two</li>
+            </ul>
+        </div>
+        <div class="box3">
+           <h1 style="text-align: center,">Keep in Touch</h1>
+           <a href="https://www.linkedin.com/home">
+            <img src ="image/linkedin.jpg" alt="linkedin" width="50" height="50">
+            </a>
+           <a href="https://www.iconfinder.com/icons/1587499/web_line_internet_icon">
+          <img src="image/Internet.jpg" alt="InternetLine" width="50" height="50">
+          </a>
+        </div>
+        <div class="box4">
+            <h1></h1>
+            <button style="background: seagreen;" id="btnnewnote"> New Note </button>
+             <button style="background: black ;" id="btndarktheme"> Dark theme </button>
+             <button style="background:seagreen ;" id="btnsave"> Save</button>
+             <button style="background:red;" id="btncancel"> Cancel</button>
+             <style type="text/css">
+             </style>
+             <div id=outer>
+                 <div id=inner>
+                     <p> This is a placeholder</p>
+             </div>
+         </div>
+     </main>
+ </body>
+ </html>
