--- a/assignment/index.html
+++ b/assignment/index.html
@@ -25,10 +25,10 @@
         <div class="box3">
            <h1 style="text-align: center,">Keep in Touch</h1>
            <a href="https://www.linkedin.com/home">
-            <img src ="image/linkedin.jpg" alt="linkedin" width="50" height="50">
+            <img src ="images/linkedin.jpg" alt="linkedin" width="50" height="50">
             </a>
            <a href="https://www.iconfinder.com/icons/1587499/web_line_internet_icon">
-          <img src="image/Internet.jpg" alt="InternetLine" width="50" height="50">
+          <img src="images/Internet.jpg" alt="InternetLine" width="50" height="50">
           </a>
         </div>
         <div class="box4">
